// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`map CT category to Klaviyo category should map a commercetools category to a klaviyo category 1`] = `
{
  "data": {
    "attributes": {
      "catalog_type": "$default",
      "external_id": "cd2cd62b-7f08-44e4-96a8-d3e34c40cac9",
      "integration_type": "$custom",
      "name": "MessageTriggerTest1",
    },
    "id": undefined,
    "type": "catalog-category",
  },
}
`;

exports[`map CT category to Klaviyo category should map a commercetools category to a klaviyo category with an existing profile id 1`] = `
{
  "data": {
    "attributes": {
      "catalog_type": undefined,
      "external_id": undefined,
      "integration_type": undefined,
      "name": "MessageTriggerTest1",
    },
    "id": "123456",
    "type": "catalog-category",
  },
}
`;
